--- a/f405rgt6.ioc
+++ b/f405rgt6.ioc
@@ -21,14 +21,17 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IP7=USB_DEVICE
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM8
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=12
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -55,20 +58,24 @@ Mcu.Pin27=PB8
 Mcu.Pin28=PB9
 Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PA2
-Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=31
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -79,6 +86,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ADC_VCC
@@ -124,11 +133,11 @@ PB13.GPIO_Label=LM_EN
 PB13.Locked=true
 PB13.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=OUT_1
+PB14.GPIO_Label=CH1
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=OUT_2
+PB15.GPIO_Label=CH2
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
@@ -143,22 +152,23 @@ PC4.Signal=ADCx_IN14
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=ADC_IS_6
 PC5.Signal=ADCx_IN15
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=OUT_3
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC6.GPIO_Label=CH3_PWM
+PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.Locked=true
-PC6.Signal=GPIO_Output
+PC6.Signal=S_TIM8_CH1
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=OUT_4
+PC7.GPIO_Label=CH4_PWM
 PC7.Locked=true
-PC7.Signal=GPIO_Output
+PC7.Signal=S_TIM8_CH2
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=OUT_5
+PC8.GPIO_Label=CH5_PWM
 PC8.Locked=true
-PC8.Signal=GPIO_Output
+PC8.Signal=S_TIM8_CH3
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=OUT_6
+PC9.GPIO_Label=CH6_PWM
 PC9.Locked=true
-PC9.Signal=GPIO_Output
+PC9.Signal=S_TIM8_CH4
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
@@ -247,7 +257,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -294,6 +304,27 @@ SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
 SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
+SH.S_TIM8_CH2.ConfNb=1
+SH.S_TIM8_CH3.0=TIM8_CH3,Output Compare3 CH3
+SH.S_TIM8_CH3.ConfNb=1
+SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
+SH.S_TIM8_CH4.ConfNb=1
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=1999
+TIM2.Prescaler=35999
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=199
+TIM3.Prescaler=359
+TIM8.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
+TIM8.Period=399
+TIM8.Prescaler=359
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -306,6 +337,12 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
