Добавлено получение CANовских пакетов

--- a/Prog/f405rgt6.ioc
+++ b/Prog/f405rgt6.ioc
@@ -8,13 +8,14 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.BS1=CAN_BS1_4TQ
-CAN1.BS2=CAN_BS2_4TQ
+CAN1.ABOM=ENABLE
+CAN1.BS1=CAN_BS1_14TQ
+CAN1.BS2=CAN_BS2_3TQ
 CAN1.CalculateBaudRate=500000
 CAN1.CalculateTimeBit=2000
-CAN1.CalculateTimeQuantum=222.22222222222223
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,SJW,Prescaler,BS2
-CAN1.Prescaler=8
+CAN1.CalculateTimeQuantum=111.11111111111111
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,SJW,Prescaler,BS2,ABOM
+CAN1.Prescaler=4
 CAN1.SJW=CAN_SJW_1TQ
 File.Version=6
 KeepUserPlacement=false
@@ -230,6 +231,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -242,7 +244,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
