Дописана (нейронкой) упаковка и запись во флеш для параметров. Обновлен README.md.

--- a/Prog/f405rgt6.ioc
+++ b/Prog/f405rgt6.ioc
@@ -64,14 +64,13 @@ Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin34=VP_NimaLTD.I-CUBE-EE_VS_DriverJjEE_1.0.0_3.2.2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=35
+Mcu.PinsNb=34
 Mcu.ThirdParty0=NimaLTD.I-CUBE-EE.3.2.2
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -93,12 +92,11 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NimaLTD.I-CUBE-EE.3.2.2.DriverJjEE=true
-NimaLTD.I-CUBE-EE.3.2.2.DriverJjEE_Checked=true
+NimaLTD.I-CUBE-EE.3.2.2.DriverJjEE_Checked=false
 NimaLTD.I-CUBE-EE.3.2.2.EE_MANUAL_CONFIG=true
 NimaLTD.I-CUBE-EE.3.2.2.EE_SELECTED_ADDRESS=0x080C0000
 NimaLTD.I-CUBE-EE.3.2.2.EE_SELECTED_PAGE_SECTOR_SIZE=EE_PAGE_SECTOR_SIZE_128K
-NimaLTD.I-CUBE-EE.3.2.2.IPParameters=DriverJjEE,EE_SELECTED_PAGE_SECTOR_SIZE,EE_MANUAL_CONFIG,EE_SELECTED_ADDRESS
+NimaLTD.I-CUBE-EE.3.2.2.IPParameters=EE_SELECTED_PAGE_SECTOR_SIZE,EE_MANUAL_CONFIG,EE_SELECTED_ADDRESS
 NimaLTD.I-CUBE-EE.3.2.2_SwParameter=DriverJjEE\:true;
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ADC_VCC
@@ -347,8 +345,6 @@ USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-VP_NimaLTD.I-CUBE-EE_VS_DriverJjEE_1.0.0_3.2.2.Mode=DriverJjEE
-VP_NimaLTD.I-CUBE-EE_VS_DriverJjEE_1.0.0_3.2.2.Signal=NimaLTD.I-CUBE-EE_VS_DriverJjEE_1.0.0_3.2.2
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
