--- a/Prog/f405rgt6.ioc
+++ b/Prog/f405rgt6.ioc
@@ -1,39 +1,83 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,NbrOfConversion,EOCSelection,DMAContinuousRequests,ExternalTrigConv
+ADC1.NbrOfConversion=9
 ADC1.NbrOfConversionFlag=1
+ADC1.Rank-10\#ChannelRegularConversion=9
 ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-3\#ChannelRegularConversion=2
+ADC1.Rank-4\#ChannelRegularConversion=3
+ADC1.Rank-5\#ChannelRegularConversion=4
+ADC1.Rank-6\#ChannelRegularConversion=5
+ADC1.Rank-7\#ChannelRegularConversion=6
+ADC1.Rank-8\#ChannelRegularConversion=7
+ADC1.Rank-9\#ChannelRegularConversion=8
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_15CYCLES
+ADC1.ScanConvMode=ENABLE
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CAN1.ABOM=ENABLE
+CAN1.AWUM=ENABLE
 CAN1.BS1=CAN_BS1_14TQ
 CAN1.BS2=CAN_BS2_3TQ
 CAN1.CalculateBaudRate=500000
 CAN1.CalculateTimeBit=2000
 CAN1.CalculateTimeQuantum=111.11111111111111
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,SJW,Prescaler,BS2,ABOM
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,SJW,Prescaler,BS2,ABOM,Mode,AWUM
+CAN1.Mode=CAN_MODE_SILENT
 CAN1.Prescaler=4
 CAN1.SJW=CAN_SJW_1TQ
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=USB_DEVICE
-Mcu.IP11=USB_OTG_FS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM8
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=12
+Mcu.IP10=USART2
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=DMA
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM8
+Mcu.IP9=USART1
+Mcu.IPNb=13
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -58,19 +102,21 @@ Mcu.Pin25=PA14
 Mcu.Pin26=PB3
 Mcu.Pin27=PB8
 Mcu.Pin28=PB9
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin29=VP_ADC1_TempSens_Input
 Mcu.Pin3=PA2
-Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_ADC1_Vref_Input
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin35=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=34
+Mcu.PinsNb=36
 Mcu.ThirdParty0=NimaLTD.I-CUBE-EE.3.2.2
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -79,6 +125,7 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -267,7 +314,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -325,9 +372,11 @@ SH.S_TIM8_CH4.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1999
 TIM2.Prescaler=35999
-TIM3.IPParameters=Prescaler,Period
+TIM3.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM3.Period=199
 TIM3.Prescaler=359
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
 TIM8.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -345,6 +394,10 @@ USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
+VP_ADC1_Vref_Input.Mode=IN-Vrefint
+VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
