Дописан canHandler для обработки кановских сообщений (обновляет статус) Дописаны OutputCh (все, что не отмечено как TODO работает вроде нормально) Не дописано отключение по току

--- a/Prog/f405rgt6.ioc
+++ b/Prog/f405rgt6.ioc
@@ -66,9 +66,10 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=USART2
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
+Mcu.IP10=USART1
+Mcu.IP11=USART2
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -76,8 +77,8 @@ Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM8
-Mcu.IP9=USART1
-Mcu.IPNb=13
+Mcu.IP9=TIM12
+Mcu.IPNb=14
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -109,14 +110,15 @@ Mcu.Pin31=VP_SYS_VS_Systick
 Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin34=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin35=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin35=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdParty0=NimaLTD.I-CUBE-EE.3.2.2
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -189,13 +191,13 @@ PB13.GPIO_Label=LM_EN
 PB13.Locked=true
 PB13.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=CH1
+PB14.GPIO_Label=CH1_PWM
 PB14.Locked=true
-PB14.Signal=GPIO_Output
+PB14.Signal=S_TIM12_CH1
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=CH2
+PB15.GPIO_Label=CH2_PWM
 PB15.Locked=true
-PB15.Signal=GPIO_Output
+PB15.Signal=S_TIM12_CH2
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB8.Mode=CAN_Activate
@@ -314,7 +316,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -361,14 +363,23 @@ SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
 SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
+SH.S_TIM12_CH1.ConfNb=1
+SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
+SH.S_TIM12_CH2.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
-SH.S_TIM8_CH3.0=TIM8_CH3,Output Compare3 CH3
+SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM12.Period=359
+TIM12.Prescaler=359
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1999
 TIM2.Prescaler=35999
@@ -377,11 +388,11 @@ TIM3.Period=199
 TIM3.Prescaler=359
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
-TIM8.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-Output Compare3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
+TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Prescaler,Period,Channel-PWM Generation3 CH3
 TIM8.Period=399
 TIM8.Prescaler=359
 USART1.IPParameters=VirtualMode
@@ -400,6 +411,8 @@ VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM12_VS_ClockSourceINT.Mode=Internal
+VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
