--- a/Boot/Boot.ioc
+++ b/Boot/Boot.ioc
@@ -24,20 +24,26 @@ Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PB8
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PB0
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=15
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PC6
+Mcu.Pin13=PC7
+Mcu.Pin14=PC8
+Mcu.Pin15=PC9
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
+Mcu.Pin2=PC2
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin3=PC3
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PB0
+Mcu.Pin8=PB10
+Mcu.Pin9=PB12
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -68,26 +74,65 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
 PB12.GPIOParameters=GPIO_Speed,PinState
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB12.Locked=true
 PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
-PB13.Locked=true
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB14.GPIO_PuPd=GPIO_NOPULL
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB14.Locked=true
-PB14.Mode=Full_Duplex_Master
-PB14.Signal=SPI2_MISO
+PB14.PinState=GPIO_PIN_RESET
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB15.GPIO_PuPd=GPIO_NOPULL
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB15.Locked=true
-PB15.Mode=Full_Duplex_Master
-PB15.Signal=SPI2_MOSI
+PB15.PinState=GPIO_PIN_RESET
+PB15.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
 PB9.Locked=true
 PB9.Mode=CAN_Activate
 PB9.Signal=CAN1_TX
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
+PC6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC6.GPIO_PuPd=GPIO_NOPULL
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC6.Locked=true
+PC6.PinState=GPIO_PIN_RESET
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC7.GPIO_PuPd=GPIO_NOPULL
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC7.Locked=true
+PC7.PinState=GPIO_PIN_RESET
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC8.GPIO_PuPd=GPIO_NOPULL
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC8.Locked=true
+PC8.PinState=GPIO_PIN_RESET
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC9.GPIO_PuPd=GPIO_NOPULL
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PC9.Locked=true
+PC9.PinState=GPIO_PIN_RESET
+PC9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -124,7 +169,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_CAN1_Init-CAN1-true-HAL-false,4-MX_SPI2_Init-SPI2-true-LL-false,5-MX_USART2_UART_Init-USART2-false-LL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-true-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_CAN1_Init-CAN1-true-HAL-false,4-MX_USART2_UART_Init-USART2-false-LL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-true-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -157,10 +202,9 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=144000000
 RCC.VcooutputI2S=192000000
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CalculateBaudRate=18.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
