--- a/Prog/f405rgt6.ioc
+++ b/Prog/f405rgt6.ioc
@@ -61,24 +61,28 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
+IWDG.IPParameters=Prescaler,Reload
+IWDG.Prescaler=IWDG_PRESCALER_32
+IWDG.Reload=100
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
+Mcu.IP10=TIM12
+Mcu.IP11=USART1
+Mcu.IP12=USART2
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM8
-Mcu.IP9=TIM12
-Mcu.IPNb=14
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM8
+Mcu.IPNb=15
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -106,19 +110,20 @@ Mcu.Pin28=PB9
 Mcu.Pin29=VP_ADC1_TempSens_Input
 Mcu.Pin3=PA2
 Mcu.Pin30=VP_ADC1_Vref_Input
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin31=VP_IWDG_VS_IWDG
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdParty0=NimaLTD.I-CUBE-EE.3.2.2
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -231,7 +236,7 @@ PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
 PCC.PartNumber=STM32F405RGTx
-PCC.Seq0=3
+PCC.Seq0=2
 PCC.Seq0.Step0.Average_Current=46 mA
 PCC.Seq0.Step0.CPU_Frequency=168 MHz
 PCC.Seq0.Step0.Category=In DS Table
@@ -247,36 +252,21 @@ PCC.Seq0.Step0.User's_Consumption=0 mA
 PCC.Seq0.Step0.Vcore=Scale1-High
 PCC.Seq0.Step0.Vdd=3.3
 PCC.Seq0.Step0.Voltage_Source=Battery
-PCC.Seq0.Step1.Average_Current=280 \u00B5A
-PCC.Seq0.Step1.CPU_Frequency=0 Hz
+PCC.Seq0.Step1.Average_Current=2.33 mA
+PCC.Seq0.Step1.CPU_Frequency=16 MHz
 PCC.Seq0.Step1.Category=In DS Table
-PCC.Seq0.Step1.DMIPS=0.0
-PCC.Seq0.Step1.Duration=0.9 ms
-PCC.Seq0.Step1.Frequency=0 Hz
-PCC.Seq0.Step1.Memory=n/a
-PCC.Seq0.Step1.Mode=STOP
-PCC.Seq0.Step1.Oscillator=Regulator_LP Flash-PwrDwn
-PCC.Seq0.Step1.Peripherals=
-PCC.Seq0.Step1.TaMax=104.96
+PCC.Seq0.Step1.DMIPS=20.0
+PCC.Seq0.Step1.Duration=1 ms
+PCC.Seq0.Step1.Frequency=16 MHz
+PCC.Seq0.Step1.Memory=RAM/FLASH
+PCC.Seq0.Step1.Mode=SLEEP
+PCC.Seq0.Step1.Oscillator=HSE
+PCC.Seq0.Step1.Peripherals=CAN1 GPIOA GPIOB GPIOC GPIOH SYS TIM8 TIM12
+PCC.Seq0.Step1.TaMax=104.65
 PCC.Seq0.Step1.User's_Consumption=0 mA
-PCC.Seq0.Step1.Vcore=No Scale
+PCC.Seq0.Step1.Vcore=Scale2-Medium
 PCC.Seq0.Step1.Vdd=3.3
-PCC.Seq0.Step1.Voltage_Source=Battery
-PCC.Seq0.Step2.Average_Current=2.02 mA
-PCC.Seq0.Step2.CPU_Frequency=16 MHz
-PCC.Seq0.Step2.Category=In DS Table
-PCC.Seq0.Step2.DMIPS=20.0
-PCC.Seq0.Step2.Duration=1 ms
-PCC.Seq0.Step2.Frequency=16 MHz
-PCC.Seq0.Step2.Memory=RAM/FLASH
-PCC.Seq0.Step2.Mode=SLEEP
-PCC.Seq0.Step2.Oscillator=HSE
-PCC.Seq0.Step2.Peripherals=CAN1
-PCC.Seq0.Step2.TaMax=104.69
-PCC.Seq0.Step2.User's_Consumption=0 mA
-PCC.Seq0.Step2.Vcore=Scale2-Medium
-PCC.Seq0.Step2.Vdd=3.3
-PCC.Seq0.Step2.Voltage_Source=Vbus
+PCC.Seq0.Step1.Voltage_Source=Vbus
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
@@ -316,7 +306,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -378,8 +368,8 @@ SH.S_TIM8_CH4.ConfNb=1
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
-TIM12.Period=359
-TIM12.Prescaler=359
+TIM12.Period=399
+TIM12.Prescaler=699
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=1999
 TIM2.Prescaler=35999
@@ -387,14 +377,14 @@ TIM3.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM3.Period=199
 TIM3.Prescaler=359
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_ENABLE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Prescaler,Period,Channel-PWM Generation3 CH3
 TIM8.Period=399
-TIM8.Prescaler=359
+TIM8.Prescaler=699
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -409,6 +399,8 @@ VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM12_VS_ClockSourceINT.Mode=Internal
